metanet56-main/k8s/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: on-web
  labels:
    app: on-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: on-web
  template:
    metadata:
      labels:
        app: on-web
    spec:
      containers:
      - name: web
        image: 10.10.10.156:5000/app-nginx:8bc18630
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
        livenessProbe:
          httpGet:
            path: /health.php
            port: 80
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 15
          failureThreshold: 3
          successThreshold: 1
        readinessProbe:
          httpGet:
            path: /health.php
            port: 80
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 15
          failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: on-web-svc
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30300
    protocol: TCP
  selector:
    app: on-web
