metanet56-main/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pod-bg-v1
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: www.admin.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: on-web-svc
            port:
              number: 80
